fix column and row gap

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -6,7 +6,8 @@
   max-width: 880px;
   min-width: 320px;
   margin: 0 auto;
-  gap: 20px;
+  row-gap: 20px;
+  column-gap: 17px;
   padding: 0;
 }
 
